# sungtools

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  archive.bat  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: sungtoolsConfig.cmake.in
include/sung/basic/: aabb.hpp  angle.hpp  byte_arr.hpp  byte_type.hpp  bytes.hpp  cvar.hpp  densify.hpp  geometry2d.hpp  geometry3d.hpp  img.hpp  img2d.hpp  input_enum.h  inputs.hpp  linalg.hpp  logic_gate.hpp  mamath.hpp  mesh_builder.hpp  optional.hpp  os_detect.hpp  random.hpp  ratio.hpp  sample2d.hpp  static_arr.hpp  static_pool.hpp  stringtool.hpp  strongnum.hpp  threading.hpp  time.hpp  units.hpp
script/: bundle_for_vs.py  gen_input_enum.py  install_here.bat
source/: CMakeLists.txt
source/gameengine/: CMakeLists.txt
source/gameengine/include/sung/gameengine/: data_central.hpp  inputs.hpp  mesh_builder.hpp
source/gameengine/src/: data_central.cpp  inputs.cpp  mesh_builder.cpp
source/general/: CMakeLists.txt
source/general/include/sung/general/: aabb.hpp  angle.hpp  bytes.hpp  cvar.hpp  expected.hpp  geometry3d.hpp  linalg.hpp  logic_gate.hpp  mamath.hpp  optional.hpp  os_detect.hpp  random.hpp  ratio.hpp  static_arr.hpp  stringtool.hpp  threading.hpp  time.hpp  units.hpp
source/general/src/: angle.cpp  bytes.cpp  cvar.cpp  geometry3d.cpp  logic_gate.cpp  stringtool.cpp  threading.cpp  time.cpp
source/general/test/: aabb.cpp  aabb_units.cpp  angle.cpp  expected.cpp  linalg.cpp  logic_gate.cpp  optional.cpp  random.cpp  time.cpp  units.cpp
source/math/: CMakeLists.txt
source/math/include/sung/math/: angle.hpp
source/math/src/: angle.cpp
source/math/test/: angle.cpp
src/basic/: angle.cpp  byte_arr.cpp  bytes.cpp  cvar.cpp  densify.cpp  geometry3d.cpp  img2d.cpp  inputs.cpp  logic_gate.cpp  mesh_builder.cpp  stringtool.cpp  threading.cpp  time.cpp
test/: CMakeLists.txt
test/basic/: CMakeLists.txt  aabb.cpp  aabb_units.cpp  angle.cpp  byte_arr.cpp  bytes.cpp  cvar.cpp  densify.cpp  expected.cpp  geometry2d.cpp  geometry3d.cpp  linalg.cpp  linalg_glm.cpp  logic_gate.cpp  mamath.cpp  optional.cpp  random.cpp  static_arr.cpp  stringtool.cpp  threading.cpp  time.cpp  units.cpp
test/gameengine/: CMakeLists.txt  data_central.cpp
test/general/: CMakeLists.txt  aabb.cpp  aabb_units.cpp  bytes.cpp  cvar.cpp  geometry2d.cpp  geometry3d.cpp  linalg.cpp  linalg_glm.cpp  logic_gate.cpp  mamath.cpp  optional.cpp  static_arr.cpp  stringtool.cpp  threading.cpp  time.cpp
